--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "trailingComma": "none",
   "tabWidth": 4,
-  "semi": false
+  "semi": false,
+  "arrowParens": "avoid"
 }
